[package]
name = "selenian-mint"
version = "2.2.0"
authors = ["Selenian Network"]
edition = "2018"
description = "A Mint contract for Selenian Protocol - allows you to register and mint asset token"
license = "Apache-2.0"

exclude = [
  "contract.wasm",
  "hash.txt",
]

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
cw20 = { version = "0.8.0" } 
cosmwasm-std = { version = "0.16.0", features = ["iterator"] }
cosmwasm-storage = { version = "0.16.0", features = ["iterator"] }
selenian-protocol = { version = "2.2.0", path = "../../packages/selenian_protocol" }
tefi-oracle = "0.2.0"
terraswap = "2.4.0"
schemars = "0.8.1"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }

[dev-dependencies]
terra-cosmwasm = { version = "2.2.0" }
cosmwasm-schema = "0.16.0"